<resources>
    <string name="app_name">android3HomeWork9MC5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_againn">Отправить снова</string>
    <string name="start_to_google">Войти Через гугол</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration_email">Регистрация по email</string>
    <string name="default_wed_client_id">293807152386-sl0kjc3olm4a1jgn6a6q52ecuu9eop5t.apps.googleusercontent.com</string>
    <string name="surname">Фамтлия</string>
    <string name="name">Имя</string>
    <string name="catalog">Каталог</string>
    <string name="input_product_price">Укажите цену товара</string>
    <string name="input_product_firm">Укажите фирму</string>
    <string name="input_product_body">Укажите, что это за товар</string>
    <string name="add_product">Добавить товар</string>
    <string name="fab_add_product_content_description">Кнопка для перехода на экран добавления нового товара</string>
    <string name="product_cover_content_description">Обложка продукта</string>
    <string name="internal_server_error">Произошла ошибка на сервере!</string>
    <string name="network_connection_error">Нет соединения с интернетом</string>
    <string name="not_found_error">Не найдено</string>
    <string name="timeout_error">Время подключения истекло! Проверьте подключение к интернету или попробуйте позже.</string>
    <string name="unauthorized_error">Вы не авторизованы в системе! Пройдите вход или зарегистрируйтесь в системе.</string>
    <string name="unexpected_error">Произошла непредвиденная ошибка! Пожалуйста повторите попытку.</string>
    <string name="connect_error_message">Не удалось подключиться к серверу. Пожалуйста, повторите попытку или попробуйте снова позже.</string>
    <string name="unknown_error">Неизвестная ошибка!</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="confirm_password_hint">Подтвердить пароль</string>
    <string name="sign_up_text">Зарегистрироваться</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="empty_text_field_error">Заполните поле</string>
    <string name="passwords_not_equals_text_field_error">Пороли не совпадают</string>
    <string name="until_resending_confirmation_email">Отправить сообщение с подтвержение повторно можно через: %1$s</string>
    <string name="confirmation_email_sent">Письмо с подтверждением было отправлено на вашу электронную почту</string>
    <string name="resend_confirmation_email">Отправить ещё раз</string>
    <string name="check_is_email_confirmed">Проверить</string>
    <string name="email_not_confirmed">Электронная почта не подтверждена!</string>
    <string name="main">Главная</string>
    <string name="catalo">Каталог</string>
    <string name="korzina">Корзина</string>
    <string name="akciay">Акция</string>
    <string name="profil">Профиль</string>
</resources>